Set html 100% height to min-height to help prevent image repeats on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-html { height: 100%; /* Takes up entire height of document, so our bg image looks correct. */ }
+html { min-height: 100%; /* Takes up entire height of document, so our bg image looks correct. */ }
 
 body {
 
